--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="btn">
             <button>편집영역</button>
             <button>원래대로버튼</button>
-            <button>추가버튼</button>
+            <button id="addBtn">추가버튼</button>
             <button>삭제버튼</button>
             <button>다운로드버튼</button>
             <button>글상자버튼</button>
