--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <button id="resetBtn">원래대로버튼</button>
             <button id="addBtn">추가버튼</button>
             <button id="deleteBtn">삭제버튼</button>
+            <!-- 기능구현실패 -->
             <button id="downloadBtn">다운로드버튼(x)</button>
             <button id="textBoxBtn">글상자버튼</button>
             <button id="rotateBtn">글상자 이동 및 회전버튼</button>
